Render a preview of the newsletter page in backend

--- a/Resources/Private/Backend/Layouts/Default.html
+++ b/Resources/Private/Backend/Layouts/Default.html
@@ -3,6 +3,6 @@
       xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
 >
     <div class="nrcuniversalmessenger-administration">
-        <f:render section="content" />
+        <f:render section="Content" />
     </div>
 </html>
