--- a/Resources/Private/Backend/Templates/UniversalMessenger/Index.html
+++ b/Resources/Private/Backend/Templates/UniversalMessenger/Index.html
@@ -1,11 +1,26 @@
 <html data-namespace-typo3-fluid="true"
       xmlns="http://www.w3.org/1999/xhtml" lang="en"
       xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
-      xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
 >
     <f:layout name="Default"/>
 
-    <f:section name="content">
-        <h1>Universal Messenger</h1>
+    <f:section name="Content">
+        <h1><f:translate key="common.universal_messenger" /></h1>
+
+        <div class="panel-group">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><f:translate key="common.newsletter_preview" /></h3>
+                </div>
+                <div class="panel-body">
+                    <div class="preview-container">
+                        <div class="iframe-container">
+                            <h2>{pageTitle}</h2>
+                            <iframe src="{previewUrl}" width="100%" height="100%"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </f:section>
 </html>
