Show newsletter status on loading of selected newsletter pageE

--- a/Resources/Private/Backend/Templates/UniversalMessenger/Index.html
+++ b/Resources/Private/Backend/Templates/UniversalMessenger/Index.html
@@ -51,7 +51,8 @@
                     <f:form.button class="btn btn-danger btn-lg float-end"
                                    name="send"
                                    type="submit"
-                                   value="live">
+                                   value="live"
+                                   disabled="{disableLiveButton}">
                         <f:translate key="common.sendNewsletterLive" />
                     </f:form.button>
                 </f:form>
