LOOE-12: Allow passing curly brackets inside URLs to UM

--- a/Resources/Private/Layouts/Page/ExampleNewsletterLayout.html
+++ b/Resources/Private/Layouts/Page/ExampleNewsletterLayout.html
@@ -4,6 +4,6 @@
       xmlns:um="http://typo3.org/ns/Netresearch/UniversalMessenger/ViewHelpers"
 >
     <um:html.body>
-        <f:render section="Main" />
+        <f:render section="Content" />
     </um:html.body>
 </html>
