Add NR logo to backend module

--- a/Resources/Private/Templates/Backend/UniversalMessenger.html
+++ b/Resources/Private/Templates/Backend/UniversalMessenger.html
@@ -20,6 +20,12 @@
             </f:if>
             <f:flashMessages queueIdentifier="{flashMessageQueueIdentifier}"/>
             <f:format.raw>{content}</f:format.raw>
+
+            <div class="brand-logo">
+                <f:image src="EXT:universal_messenger/Resources/Public/Icons/Netresearch-Logo.svg"
+                         alt="Netresearch Logo"
+                         title="Netresearch Logo" />
+            </div>
         </div>
         <f:if condition="{formTag}">
             <f:then>
