--- a/Resources/Public/Css/Module.css
+++ b/Resources/Public/Css/Module.css
@@ -1,3 +1,16 @@
+.typo3-module-universal-messenger {
+    .brand-logo {
+        background-color: #fff;
+        text-align: center;
+        padding: 1rem;
+        margin-bottom: 0;
+
+        > img {
+            max-width: 150px;
+        }
+    }
+}
+
 .typo3-module-universal-messenger .preview-container {
     display: flex;
     width: 100%;
