Move viewhelper in right place

--- a/Resources/Private/Backend/Templates/NewsletterPreview/Preview.html
+++ b/Resources/Private/Backend/Templates/NewsletterPreview/Preview.html
@@ -8,6 +8,8 @@
     <f:section name="Content">
         <um:html.spacer size="16" />
 
+        PREVIEW
+
         <um:html.container>
             <um:html.spacer size="16" />
 
